--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ author: Anant Narayanan <anant@kix.in>
 description: The AngularFire library in Dart.
 homepage: https://github.com/firebase/angularFire/tree/dart
 dependencies:
-  angular: ">=0.9.1 <0.10.0"
+  angular: 
+    git://github.com/angular/angular.dart.git
   browser: ">=0.8.7 <0.11.0"
   firebase: ">=0.1.0 <0.2.0"
