--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,4 +7,8 @@ dependencies:
   angular:
     git: git://github.com/angular/angular.dart.git #version: 0.9.11
   browser: ">=0.8.7 <0.11.0"
-  firebase: ">=0.1.0 <0.2.0"
+  firebase:
+    git:
+      url: https://github.com/kwalrath/firebase-dart.git
+      ref: master
+
