--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,6 @@ dependencies:
   browser: ">=0.8.7 <0.11.0"
   firebase:
     git:
-      url: https://github.com/kwalrath/firebase-dart.git
+      url: git://github.com/kwalrath/firebase-dart.git
       ref: master
 
